--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,20 +3,17 @@
 }
 
 body {
+    display: flex;
+    height: 100vh;
     margin: 0;
     padding: 0;
 }
 
-#conteneur__1-2-1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr auto 1fr;
-    height: 100vh;
-}
+
 
 #element {
-    grid-column: 2;
-    grid-row: 2;
+    width: 600px;
+    margin: auto;
 }
 
 #conteneur__1-1 {
