--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,31 +9,25 @@ body {
     padding: 0;
 }
 
-
-
-#element {
+#row {
     width: 600px;
     margin: auto;
 }
 
-#conteneur__1-1 {
+#item {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 2rem;
     padding-top: 3rem;
-   
 }
 
-
 @media only screen and (min-width: 600px) {
-    #conteneur__1-1 {
+    #item {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
     }
 }
-
-
 
 h1 {
     text-align: center;
