--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,7 +19,7 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 2rem;
-    padding-top: 3rem;
+    padding-top: 2rem;
 }
 
 @media only screen and (min-width: 600px) {
@@ -32,17 +32,20 @@ body {
 h1 {
     text-align: center;
     margin: 0;
-    padding-bottom: 3rem;
-    border-bottom: 2px solid #ddd;
+    padding-bottom: 2rem;
+    border-bottom: 2px solid #f1f1f1;
+    color: #333;
 }
+
 
 input {
     flex: 1;
     padding: 0.5rem;
-    border: 2px solid #ddd;
+    border: 2px solid #f1f1f1;
     box-shadow: none;
-    
 }
+
+
 
 .input {
     display: flex;
@@ -50,15 +53,29 @@ input {
     font-size: 13px;
 }
 
+.input:last-child {
+    margin-bottom: 2rem;
+}
+
+
 .fin {
     display: inline-block;
-    border: 2px solid #ddd;
+    border: 2px solid #f1f1f1;
+    border-left: none;
     margin: 0;
     padding: 0.5rem;
     background: #f9f9f9;
+    font-size: 13px;
+    line-height: 20px;;
 }
 
 select {
     border: 0;
     background: none;
+}
+
+#valeur {
+    border-top: 2px solid #f1f1f1;
+    padding-top: 2rem;
+    width: 100%;;
 }
